# tic-tac-toe

./: Makefile  README.md  pyproject.toml  requirements.txt
tests/: test_place.py  test_win.py
tictactoe/: board.py
